movies app using retrofit'

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,2 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+
+    <dimen name="default_padding">16dp</dimen>
+    <dimen name="profile_image_dimen">130dp</dimen>
+    <dimen name="default_margin">16dp</dimen>
+    <dimen name="default_micro_margin">4dp</dimen>
+    <dimen name="default_large_margin">32dp</dimen>
+
+    <dimen name="default_extra_large_margin">40dp</dimen>
+    <dimen name="default_mini_margin">8dp</dimen>
+    <dimen name="text_size">18sp</dimen>
+    <dimen name="selected_text_size">22sp</dimen>
+    <dimen name="toolbar_elevation">4dp</dimen>
+    <dimen name="toolbar_height">56dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="default_mini_padding">8dp</dimen>
+    <dimen name="default_big">24dp</dimen>
+    <dimen name="default_button">48dp</dimen>
+    <dimen name="text_16">16sp</dimen>
+    <dimen name="margin_sports">72dp</dimen>
+    <dimen name="custom_profile_image">50dp</dimen>
+    <dimen name="custom_profile_padding">2dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="text_32">32sp</dimen>
+    <dimen name="text_22">20sp</dimen>
+    <dimen name="text_large">28sp</dimen>
+    <dimen name="text_42">42sp</dimen>
+
+    <dimen name="scale_line_small">10dp</dimen>
+    <dimen name="scale_line_medium">25dp</dimen>
+    <dimen name="scale_line_large">50dp</dimen>
+    <dimen name="yellow_line_stroke_width">6dp</dimen>
+    <dimen name="txt_size">16sp</dimen>
+    <dimen name="text_start_point">107dp</dimen>
+    <dimen name="card_default_elevation">4dp</dimen>
+    <dimen name="default_nuts">300dp</dimen>
+    <dimen name="text_14">14sp</dimen>
+    <dimen name="default_36">36dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="text_18">18sp</dimen>
+    <dimen name="user_profile_dimension">80dp</dimen>
+    <dimen name="button_height">36dp</dimen>
+    <dimen name="profile_interest_height">150dp</dimen>
+    <dimen name="margin_4">4dp</dimen>
+    <dimen name="signin_signup_width">150dp</dimen>
+    <dimen name="margin_48">48dp</dimen>
+    <dimen name="otp_container">80dp</dimen>
+    <dimen name="margin_2">2dp</dimen>
+    <dimen name="measure_mini_width">10dp</dimen>
+    <dimen name="measure_mid_width">20dp</dimen>
+    <dimen name="measure_max_width">40dp</dimen>
+    <dimen name="measure_highlight_width">60dp</dimen>
+    <dimen name="negative_4">-4dp</dimen>
+    <dimen name="measure_double_max_width">100dp</dimen>
+    <dimen name="margin_100">100dp</dimen>
+    <dimen name="margin_150">150dp</dimen>
+    <dimen name="margin_32">32dp</dimen>
+    <dimen name="interests_diameter">88dp</dimen>
+    <dimen name="margin_login_button">64dp</dimen>
+
+</resources>
