--- a/app/src/main/res/layout/fragment_contact_list.xml
+++ b/app/src/main/res/layout/fragment_contact_list.xml
@@ -1,6 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/text">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimary"
+        android:text="@string/app_name"
+        android:textStyle="bold"
+        android:textSize="@dimen/text_22"
+        android:id="@+id/contactnameTextView"
+        android:paddingRight="@dimen/default_margin"
+        android:paddingEnd="@dimen/default_margin"
+        android:paddingLeft="@dimen/default_margin"
+        android:paddingStart="@dimen/default_margin" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorAccent"
+        android:text=" number"
+        android:textStyle="bold"
+        android:paddingRight="@dimen/default_margin"
+        android:paddingEnd="@dimen/default_margin"
+        android:paddingLeft="@dimen/default_margin"
+        android:paddingStart="@dimen/default_margin"
+        android:textSize="16sp"
+        android:id="@+id/contactnumberTextView"
+        android:layout_marginTop="20dp"/>
 
 </LinearLayout>
