--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -8,7 +8,7 @@
     tools:layout_editor_absoluteX="0dp">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_contact"
+        android:id="@+id/recycler_view"
         android:layout_width="360dp"
         android:layout_height="497dp"
         android:layout_marginEnd="8dp"
@@ -23,16 +23,16 @@
         android:layout_height="wrap_content"
         android:indeterminate="true"
         android:layout_centerInParent="true"
-        android:id="@+id/contactprogressBar"
+        android:id="@+id/progressBar"
         tools:ignore="MissingConstraints"
         android:layout_marginBottom="260dp"
-        app:layout_constraintBottom_toBottomOf="@+id/recycler_view_contact"
-        app:layout_constraintTop_toTopOf="@+id/recycler_view_contact"
+        app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
+        app:layout_constraintTop_toTopOf="@+id/recycler_view"
         android:layout_marginTop="8dp"
         app:layout_constraintVertical_bias="1.0"
-        app:layout_constraintEnd_toEndOf="@+id/recycler_view_contact"
+        app:layout_constraintEnd_toEndOf="@+id/recycler_view"
         android:layout_marginEnd="8dp"
-        app:layout_constraintStart_toStartOf="@+id/recycler_view_contact"
+        app:layout_constraintStart_toStartOf="@+id/recycler_view"
         android:layout_marginStart="8dp" />
 
 
