--- a/app/src/main/res/layout/items_toprated.xml
+++ b/app/src/main/res/layout/items_toprated.xml
@@ -1,6 +1,60 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.v7.widget.CardView
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/card_view"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    card_view:cardUseCompatPadding="true">
 
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/MoviePhotoIVtoprated"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:contentDescription="action_settings"
+            android:scaleType="centerCrop"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:id="@+id/MovieNameTVtoprated"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:gravity="center_horizontal"
+            android:paddingBottom="20dp"
+            android:text="hello_world"
+            android:textColor="@color/text"
+            android:textSize="16dp"
+            android:textStyle="bold|italic"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="198dp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_stars_white_18dp"
+            android:layout_alignBottom="@+id/MovieNameTVtoprated"
+            android:id="@+id/imageView"
+            android:layout_toStartOf="@+id/textView" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="stars"
+            android:textSize="18sp"
+            android:textColor="@color/text"
+            android:textStyle="italic|bold"
+            android:id="@+id/textView"
+            android:layout_alignBottom="@+id/MovieNameTVtoprated"
+            android:layout_centerHorizontal="true" />
+
+
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
