--- a/app/src/main/res/layout/items_upcoming.xml
+++ b/app/src/main/res/layout/items_upcoming.xml
@@ -1,6 +1,57 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.v7.widget.CardView
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/card_view_upcoming"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="5dp"
+    card_view:cardUseCompatPadding="true">
 
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/relativeLayoutupcoming"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/MoviePhotoIVupcoming"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@mipmap/ic_launcher"
+            android:contentDescription="action_settings"
+            android:scaleType="centerCrop"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:id="@+id/MovieNameTVupcoming"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:gravity="center_horizontal"
+            android:paddingBottom="20dp"
+            android:text="hello_world"
+            android:textColor="@color/text"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true" />
+
+
+
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="date"
+            android:maxLength="20"
+            android:textColor="@color/text"
+            android:textSize="20sp"
+            android:textStyle="bold|italic"
+            android:layout_alignBottom="@+id/MovieNameTVupcoming"
+            android:layout_centerHorizontal="true" />
+
+
+
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
